<?xml version="1.0"?>
<package format="2">
  <name>framefab_gui</name>
  <version>0.1.0</version>
  <description>The framefab_gui package presents an alternative front end for the framefab_mpp project that is focused on providing an easy to use, ATM-like interface for operating the system end to end.</description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  <author email="yijiangh@mit.edu">Yijiang Huang</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>framefab_msgs</depend>
  <depend>framefab_input_gui</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>

  <export>
   <rviz plugin="${prefix}/plugin.xml"/>
  </export>

</package>
